--- a/css/styles.css
+++ b/css/styles.css
@@ -184,9 +184,21 @@ nav {
     justify-content: center;
     background-size: cover;
     padding: 188px 0;
+
+    background-image: 
+    url("../images/people-office.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
-.main-title {
+.hero {
+    max-width: 496px;
+    margin: 0 auto;
+    
+}
+
+.hero-title {
     font-family: "Roboto", sans-serif;
     font-size: 56px;
     letter-spacing: 0.02em;
@@ -327,6 +339,10 @@ nav {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     flex-basis: calc((100% - 72px) / 4);
+
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.8),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 6px rgba(46, 47, 66, 0.8);
 
 
 }
