--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,12 @@ img {
     padding: 0 15px;
     border-bottom: 1px solid #e7e9fc;
     background-color: #ffffff;
+    
+    
+    
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 
 }
 
@@ -340,9 +346,9 @@ nav {
     border-radius: 0px 0px 4px 4px;
     flex-basis: calc((100% - 72px) / 4);
 
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.8),
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 6px rgba(46, 47, 66, 0.8);
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 
 
 }
