--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ img {
     border-bottom: 1px solid #e7e9fc;
     background-color: #ffffff;
     
-    
+    /* додала внизу */
     
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -154,6 +154,11 @@ nav {
     display: flex;
     gap: 40px;
     margin: 0;
+
+    /* додала внизу */
+    color: #404bbf;
+
+    
 }
 
 
@@ -191,12 +196,17 @@ nav {
     background-size: cover;
     padding: 188px 0;
 
-    background-image: 
+    /* додала внизу */
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)), 
     url("../images/people-office.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    max-width: 1440px;
+
 }
+
 
 .hero {
     max-width: 496px;
@@ -230,6 +240,10 @@ nav {
     cursor: pointer;
     font-size: 16px;
     margin: 0 auto;
+
+
+/* додала внизу */
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -295,6 +309,17 @@ nav {
     flex: 1 1 calc((100% - 72px) / 4);
 }
 
+/* додала внизу */
+.box-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+}
 
 .text {
     font-size: 16px;
@@ -346,6 +371,7 @@ nav {
     border-radius: 0px 0px 4px 4px;
     flex-basis: calc((100% - 72px) / 4);
 
+    /* додала внизу */
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -503,4 +529,3 @@ letter-spacing: 0.03em;
     
 
 }
-
