--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,6 @@ img {
 
 
 .header {
-    list-style: none;
     font-weight: 500;
     margin: 0 auto;
     padding: 0 15px;
@@ -91,6 +90,10 @@ nav {
     letter-spacing: 0.02em;
     color: #2e2f42;
 
+    /* додала внизу */
+    color: #404bbf;
+    
+
 }
 
 
@@ -109,6 +112,11 @@ nav {
     color: #2e2f42;
     padding-top: 24px;
     padding-bottom: 24px;
+
+
+/* додала внизу */
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -155,9 +163,6 @@ nav {
     gap: 40px;
     margin: 0;
 
-    /* додала внизу */
-    color: #404bbf;
-
     
 }
 
@@ -174,6 +179,9 @@ nav {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+
+    /* додала внизу */
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -199,11 +207,11 @@ nav {
     /* додала внизу */
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)), 
-    url("../images/people-office.jpg");
+    url("../images/img11.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 1440px;
+    
 
 }
 
@@ -306,7 +314,7 @@ nav {
 
 
 .features-section {
-    flex: 1 1 calc((100% - 72px) / 4);
+    flex: calc((100% - 72px) / 4);
 }
 
 /* додала внизу */
@@ -525,7 +533,6 @@ letter-spacing: 0.03em;
     letter-spacing: 0.02em;
     max-width: 264px;
     line-height: 1.5;
-    max-width: 264px;
     
 
 }
