--- a/css/styles.css
+++ b/css/styles.css
@@ -203,16 +203,14 @@ nav {
     justify-content: center;
     background-size: cover;
     padding: 188px 0;
-
-    /* додала внизу */
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)), 
     url("../images/img11.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    
-
+    /* додала внизу */
+    max-width: 1440px
 }
 
 
@@ -248,9 +246,8 @@ nav {
     cursor: pointer;
     font-size: 16px;
     margin: 0 auto;
-
-
-/* додала внизу */
+    
+    /* додала внизу */
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
