--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,8 @@ img {
 .header {
     font-weight: 500;
     margin: 0 auto;
-    padding: 0 15px;
+    /* видалила padding: 0 15px; */
+    
     border-bottom: 1px solid #e7e9fc;
     background-color: #ffffff;
     
@@ -80,9 +81,7 @@ nav {
 
 .page-nav {
     display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+ /* видалила list-style: none;margin: 0;padding: 0; */
     gap: 40px;
     font-size: 16px;
     line-height: 1.5;
@@ -90,8 +89,6 @@ nav {
     letter-spacing: 0.02em;
     color: #2e2f42;
 
-    /* додала внизу */
-    color: #404bbf;
     
 
 }
@@ -109,7 +106,12 @@ nav {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2e2f42;
+    
+    /* видалила color: 2e2f42; */
+
+    /* додала color: 404bbf; */
+    color: #404bbf;
+    
     padding-top: 24px;
     padding-bottom: 24px;
 
@@ -119,6 +121,16 @@ nav {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* додала внизу */
+.nav-link::after {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
 
 .nav-link:hover,
 .nav-link:focus {
@@ -194,13 +206,13 @@ nav {
 
 .page-title {
     background-color: #2e2f42;
-    text-align: center;
+    /* видалили text-align: center; */
+    /* видалили display: flex; */
+    /* видалили flex-direction: column; */
+    /* видалили align-items: center; */
+    /* видалили justify-content: center; */
     line-height: 1.07;
     background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-size: cover;
     padding: 188px 0;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
@@ -209,7 +221,6 @@ nav {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* додала внизу */
     max-width: 1440px
 }
 
