--- a/css/styles.css
+++ b/css/styles.css
@@ -114,15 +114,15 @@ nav {
     
     padding-top: 24px;
     padding-bottom: 24px;
-
-
-/* додала внизу */
+   /* додала внизу */
     position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 /* додала внизу */
 .nav-link::after {
+    content: "";
     width: 100%;
     position: absolute;
     left: 0;
@@ -130,11 +130,18 @@ nav {
     height: 4px;
     background-color: #404bbf;
     border-radius: 2px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+  /* додала внизу */
 .nav-link:hover,
 .nav-link:focus {
-    color: #404bbf;
+    
+    opacity: 1;
+}
+  /* додала внизу */
+.current::after{
+    opacity: 1;
 }
 
 
