--- a/css/styles.css
+++ b/css/styles.css
@@ -33,13 +33,8 @@ img {
 .header {
     font-weight: 500;
     margin: 0 auto;
-    /* видалила padding: 0 15px; */
-    
     border-bottom: 1px solid #e7e9fc;
     background-color: #ffffff;
-    
-    /* додала внизу */
-    
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -81,7 +76,6 @@ nav {
 
 .page-nav {
     display: flex;
- /* видалила list-style: none;margin: 0;padding: 0; */
     gap: 40px;
     font-size: 16px;
     line-height: 1.5;
@@ -106,21 +100,16 @@ nav {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    
-    /* видалила color: 2e2f42; */
-
-    /* додала color: 404bbf; */
     color: #404bbf;
     
     padding-top: 24px;
     padding-bottom: 24px;
-   /* додала внизу */
     position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-/* додала внизу */
+
 .nav-link::after {
     content: "";
     width: 100%;
@@ -130,16 +119,15 @@ nav {
     height: 4px;
     background-color: #404bbf;
     border-radius: 2px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-  /* додала внизу */
-.nav-link:hover,
-.nav-link:focus {
-    
+ 
+.nav-link:hover::after,
+.nav-link:focus::after {
     opacity: 1;
 }
-  /* додала внизу */
+
 .current::after{
     opacity: 1;
 }
@@ -198,8 +186,6 @@ nav {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-
-    /* додала внизу */
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -213,11 +199,6 @@ nav {
 
 .page-title {
     background-color: #2e2f42;
-    /* видалили text-align: center; */
-    /* видалили display: flex; */
-    /* видалили flex-direction: column; */
-    /* видалили align-items: center; */
-    /* видалили justify-content: center; */
     line-height: 1.07;
     background-position: center;
     background-size: cover;
@@ -264,8 +245,6 @@ nav {
     cursor: pointer;
     font-size: 16px;
     margin: 0 auto;
-    
-    /* додала внизу */
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
@@ -393,8 +372,6 @@ nav {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     flex-basis: calc((100% - 72px) / 4);
-
-    /* додала внизу */
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
