--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,14 @@ nav {
 }
 
 
+/* додала внизу */
+.social-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+
 .text-info {
     font-size: 16px;
     line-height: 1.5;
