--- a/css/styles.css
+++ b/css/styles.css
@@ -336,6 +336,7 @@ nav {
 .team {
     background-color: #F4F4FD;
     padding: 120px 0;
+
 }
 
 .section-title {
@@ -393,6 +394,13 @@ nav {
     color: #434455;
     margin: 0;
 }
+/* додаю зміни соцмережі */
+.social-links-team {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+
+}
 
 .portfolio {
     padding-top: 120px;
@@ -408,7 +416,6 @@ nav {
     padding: 0;
     list-style: none;
     box-sizing: border-box;
-
 
 
 }
@@ -439,6 +446,7 @@ nav {
     list-style: none;
     display: block;
     text-align: left;
+    
 
 
 }
@@ -447,10 +455,19 @@ nav {
 .portfolio-items {
     width: calc((100% - 48px) / 3);
     background-color: #FFFFFF;
-   
 
-
+    /* box-shadow */
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+ /* box-shadow */
+ .portfolio-items:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
+ }
+ /* ----- */
+
 
 .portfolio-items:nth-child(3n) {
     margin-right: 0;
@@ -472,6 +489,41 @@ nav {
     color: #434455;
 
 
+}
+/* зміни для тексту що вилазить */
+.portfolio-img-wrapper {
+    position: relative;
+    overflow: hidden;
+   
+}
+/* Стилі для параграфа (оверлея) */
+.overlay-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 24px 32px;
+    background-color: #4D5AE5;
+    /* Колір фону оверлея */
+    color: #F4F4FD;
+    /* Колір тексту */
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+
+    /* Початковий стан: зміщуємо параграф вниз на 100% його висоти (приховано) */
+    transform: translateY(100%);
+
+    /* Додаємо плавний перехід для властивості transform */
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Умова ховера: коли наводимо мишку на li.portfolio-items, 
+   знаходимо всередині нього .overlay-text і застосовуємо translateY(0%) */
+.portfolio-items:hover .overlay-text {
+    /* Кінцевий стан: повертаємо параграф на його початкове місце */
+    transform: translateY(0%);
 }
 
 
@@ -532,11 +584,11 @@ letter-spacing: 0.03em;
 
 }
 
-/* додаю зміни */
 .footer-webstudio {
     margin-right: 120px;
 } 
 
+/* додаю зміни */
 .social-media-title {
     font-weight: 500;
     font-size: 16px;
