--- a/css/styles.css
+++ b/css/styles.css
@@ -245,13 +245,16 @@ nav {
     cursor: pointer;
     font-size: 16px;
     margin: 0 auto;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 
 }
 
 .button:hover,
 .button:focus {
     background-color: #404BBF;
+    color: #000000;
 }
 
 
@@ -420,8 +423,17 @@ nav {
     align-items: center;
     justify-content: center;
 }
+.social-item:first-child .social-link {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .social-icon {
     fill: #f4f4fd
+}
+
+.social-link:hover,
+.social-link:focus {
+    background-color: #404bbf;
 }
 
 /* -------- */
