--- a/css/styles.css
+++ b/css/styles.css
@@ -245,8 +245,7 @@ nav {
     cursor: pointer;
     font-size: 16px;
     margin: 0 auto;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 
 }
@@ -254,7 +253,7 @@ nav {
 .button:hover,
 .button:focus {
     background-color: #404BBF;
-    color: #000000;
+    
 }
 
 
@@ -422,6 +421,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-item:first-child .social-link {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
