--- a/css/styles.css
+++ b/css/styles.css
@@ -565,6 +565,7 @@ nav {
 
 }
 
+
 .footer-link {
     text-decoration: none;
     font-family: "Raleway", sans-serif;
@@ -607,7 +608,11 @@ letter-spacing: 0.03em;
     margin-right: 120px;
 } 
 
-/* додаю зміни */
+/* додаю зміни 20.11 */
+.footer-items {
+    display: flex;
+    align-items: baseline
+}
 .social-media-title {
     font-weight: 500;
     font-size: 16px;
@@ -617,9 +622,34 @@ letter-spacing: 0.03em;
     margin-bottom: 16px;
 }
 
-.social-media-list {
+.footer-social {
     display: flex;
     gap: 16px;
 }
+
+.footer-social-items {
+    width: 40px;
+    height: 40px;
+}
+.footer-social-links {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.footer-social-links:hover,
+.footer-social-links:focus {
+    background-color: #31d0aa;
+
+}
+.social-icons {
+    fill: #f4f4fd;
+}
+
 
 /* ----- */
