--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ img {
     height: auto;
 }
 
-/* додаю 20.11 */
+
 :root {
     --white-color: #FFFFFF;
     --brand-color: #4d5ae5;
@@ -253,14 +253,15 @@ nav {
     cursor: pointer;
     font-size: 16px;
     margin: 0 auto;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     
 
 }
 
 .button:hover,
 .button:focus {
-    background-color: #404BBF;
+background-color: #404BBF;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -554,9 +555,6 @@ nav {
 }
 
 
-
-
-
 .footer {
     background-color: #2e2f42;
     line-height: 1.5;
@@ -612,12 +610,9 @@ letter-spacing: 0.03em;
 
 }
 
-.footer-webstudio {
-    margin-right: 120px;
-    
-} 
 
-/* додаю зміни 20.11 */
+    
+
 
 .social-media-title {
     font-weight: 500;
@@ -634,6 +629,8 @@ letter-spacing: 0.03em;
 .footer-social {
     display: flex;
     gap: 16px;
+    padding: 0;
+    
 }
 
 
@@ -643,14 +640,11 @@ letter-spacing: 0.03em;
 }
 .footer-social-links {
     width: 100%;
-    height: 100%;
-    /* видалила 20.11 background-color: #4d5ae5; */
-    
+    height: 100%;    
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;  
-
     background-color: var(--brand-color);
 
 }
@@ -669,6 +663,9 @@ letter-spacing: 0.03em;
  {
     fill: #f4f4fd;
 }
+
+
+
 
 
 
