--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ img {
     --brand-color: #4d5ae5;
     --hover-color: #31d0aa;
     --icon-fill: #f4f4fd;
+    --studio-link-color: #404bbf;
 }
 
 
@@ -90,6 +91,8 @@ nav {
     font-weight: 500;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin: 0;
+    padding-left: 0;
 
     
 
@@ -101,6 +104,9 @@ nav {
     color: #404bbf;
 }
 
+.nav-link.current {
+    color: var(--studio-link-color);
+}
 
 .nav-link {
     display: block;
@@ -108,8 +114,7 @@ nav {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #404bbf;
-    
+    color: #2e2f42;
     padding-top: 24px;
     padding-bottom: 24px;
     position: relative;
@@ -125,8 +130,9 @@ nav {
     left: 0;
     bottom: -1px;
     height: 4px;
-    background-color: #404bbf;
+    background-color: var(--studio-link-color);
     border-radius: 2px;
+    opacity: 0;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -177,6 +183,7 @@ nav {
     display: flex;
     gap: 40px;
     margin: 0;
+    padding-left: 0;
 
     
 }
@@ -219,11 +226,6 @@ nav {
 }
 
 
-.hero {
-    max-width: 496px;
-    margin: 0 auto;
-    
-}
 
 .hero-title {
     font-family: "Roboto", sans-serif;
@@ -234,6 +236,8 @@ nav {
     color: #FFFFFF;
     font-weight: 700;
     margin: 0 auto 48px;
+    
+   
 }
 
 
@@ -252,6 +256,7 @@ nav {
     font-size: 16px;
     margin: 0 auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     
     
 
@@ -565,7 +570,7 @@ background-color: #404BBF;
 .footer .container {
     display: flex;
     align-items: baseline;
-    gap: 120px;
+    
 
 }
 
