--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,8 @@ nav {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 1440px
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 
@@ -256,9 +257,6 @@ nav {
     font-size: 16px;
     margin: 0 auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-    
-    
 
 }
 
@@ -600,8 +598,6 @@ letter-spacing: 0.03em;
 
 }
 
-
-
 .footer-text {
     color: #E7E9FC;
     font-family: "Roboto", sans-serif;
@@ -642,6 +638,7 @@ letter-spacing: 0.03em;
     width: 40px;
     height: 40px;
 }
+
 .footer-social-links {
     width: 100%;
     height: 100%;    
@@ -659,7 +656,6 @@ letter-spacing: 0.03em;
 
 .footer-social-links:hover,
 .footer-social-links:focus {
-    /* видалила 20.11 background-color: #31d0aa; */
     background-color: var(--hover-color);
 
 }
